setup an example for adam to try

--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,21 @@
       }
     </script>
     <wc-snake-game onChange="gameEvent(event); return false;"></wc-snake-game>
+    <!-- <wc-snake-game
+      size="20"
+      onChange="gameEvent(event); return false;"
+    ></wc-snake-game> -->
+    <!-- <wc-snake-game
+      size="50"
+      onChange="gameEvent(event); return false;"
+    ></wc-snake-game> -->
+    <!-- <wc-snake-game-worker
+      size="50"
+      onChange="gameEvent(event); return false;"
+    ></wc-snake-game-worker> -->
+    <!-- <wc-snake-game
+      size="100"
+      onChange="gameEvent(event); return false;"
+    ></wc-snake-game> -->
   </body>
 </html>
