--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
         console.log(event.detail);
       }
     </script>
-    <wc-snake-game onChange="gameEvent(event); return false;"></wc-snake-game>
-    <!-- <wc-snake-game
+    <!-- <wc-snake-game onChange="gameEvent(event); return false;"></wc-snake-game>
+    <wc-snake-game
       size="20"
       onChange="gameEvent(event); return false;"
     ></wc-snake-game> -->
@@ -36,10 +36,10 @@
       size="50"
       onChange="gameEvent(event); return false;"
     ></wc-snake-game> -->
-    <!-- <wc-snake-game-worker
-      size="50"
+    <wc-snake-game-worker
+      size="30"
       onChange="gameEvent(event); return false;"
-    ></wc-snake-game-worker> -->
+    ></wc-snake-game-worker>
     <!-- <wc-snake-game
       size="100"
       onChange="gameEvent(event); return false;"
